--- a/index.html
+++ b/index.html
@@ -6,10 +6,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Space-invaders</title>
+    <link rel="stylesheet" href="style.css">
 </head>
-<link rel="stylesheet" href="app.js">
+
 
 <body>
+    <div class="grid"></div>
 
 
 </body>
