--- a/index.html
+++ b/index.html
@@ -11,8 +11,11 @@
 
 
 <body>
-    <h1 class="results"></h1>
+    <h1>SPACE-INVADERS</h1>
+    <h2 class="results"></h2>
     <div class="grid"></div>
+    <section class='instructions'>Press space bar or the up arrow key to shoot!</section>
+
 
 
 </body>
