--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <h1>SPACE-INVADERS</h1>
     <h2 class="results"></h2>
     <div class="grid"></div>
-    <section class='instructions'>Press space bar or the up arrow key to shoot!</section>
+    <section class='instructions'>Press space bar or the up arrow key to shoot, and the left and right arrow keys to move!</section>
 
 
 
