added extra alien bullets and logic to detect if player got shot by the aliens,changed the alien bullets colour to red

--- a/index.html
+++ b/index.html
@@ -15,8 +15,11 @@
     <h2 class="results"></h2>
     <div class="grid"></div>
     <section class='instructions'>Press space bar or the up arrow key to shoot!</section>
-
-
+    <section id='levels'>
+        <button id='level-1'>Level 1</button>
+        <button id='level-2'>Level 2</button>
+        <button id='level-3'>Level 3</button>
+    </section>
 
 </body>
 <script src="app.js"></script>
